--- a/src/main/resources/templates/admin/elenchi/giocatoriPreferiti.html
+++ b/src/main/resources/templates/admin/elenchi/giocatoriPreferiti.html
@@ -4,51 +4,62 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Classifica per Preferenze</title>
+	<link rel="stylesheet" href="/pagineDiServizio.css" />
 </head>
 
 <body>
 	<h1>I Giocatori preferiti della Community</h1>
 
-	<table>
-		<tr>
-			<td>Posizione</td>
-			<td>Giocatore</td>
-			<td>Ruolo</td>
-			<td>Squadra</td>
-			<td>Numero Preferenze</td>
-		</tr>
+	<div class="tabella">
+		<table>
+			<tr th:if="${elencoGiocatori.size > 0}">
+				<td><strong>Posizione</strong></td>
+				<td><strong>Giocatore</strong></td>
+				<td><strong>Ruolo</strong></td>
+				<td><strong>Squadra</strong></td>
+				<td><strong>Numero Preferenze</strong></td>
+			</tr>
 
-		<tr th:each="g, iStat: ${elencoGiocatori}">
-			<td th:text="${iStat.count}" />
+			<tr th:unless="${elencoGiocatori.size > 0}">
+				<strong><span>NESSUN GIOCATORE DA MOSTRARE</span></strong>
+			</tr>
 
-			<td>
-				<a th:href="@{'/admin/giocatore/' + ${g.id}}" th:text="${g.nome} + ' ' + ${g.cognome}" />
-			</td>
+			<tr th:each="g, iStat: ${elencoGiocatori}">
+				<td th:text="${iStat.count}" />
 
-			<td th:text="${g.ruolo}" />
+				<td>
+					<a th:href="@{'/admin/giocatore/' + ${g.id}}" th:text="${g.nome} + ' ' + ${g.cognome}" />
+				</td>
 
-			<td th:if="${g.squadra} != null">
-				<a th:href="@{'/admin/squadra/' + ${g.squadra.id}}" th:text="${g.squadra.nome}" />
-			</td>
+				<td th:text="${g.ruolo}" />
 
-			<td th:text="${g.numeroPreferenze}" />
+				<td th:if="${g.squadra} != null">
+					<a th:href="@{'/admin/squadra/' + ${g.squadra.id}}" th:text="${g.squadra.nome}" />
+				</td>
 
-		</tr>
-	</table>
+				<td th:text="${g.numeroPreferenze}" />
 
-
-	<div>
-		<a th:href="@{/default}">Torna alla Home</a>
+			</tr>
+		</table>
 	</div>
 
-	<div>
-		<a th:href="@{/logout}">Logout</a>
+
+	<div id="riferimenti">
+		<div class="link">
+			<a th:href="@{/default}">Torna alla Home</a>
+		</div>
+
+		<div id="link">
+			<a th:href="@{/logout}">Logout</a>
+		</div>
 	</div>
 
 	<footer>
 		<div>Realizzato da: </div>
-		<div>Riccardo De Cesaris - Matricola: 547762</div>
-		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>
+			<span>Riccardo De Cesaris - Matricola: 547762, </span>
+			<span>Filippo Vannutelli - Matricola: 550745</span>
+		</div>
 		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
 </body>
