--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -3,14 +3,13 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Login Utente</title>
+	<title>Login</title>
+	<link rel="stylesheet" href="/loginRegister.css" />
 </head>
 
 <body>
 
-	<div id="intestazione">
-		<h1>Login</h1>
-	</div>
+	<h1>Login</h1>
 
 	<div id="form">
 		<form th:action="@{/login}" method="POST">
@@ -32,14 +31,16 @@
 		</form>
 	</div>
 
-	<div id="tornaHome">
+	<div id="link">
 		<a th:href="@{/index}">Torna alla pagina iniziale</a>
 	</div>
 
 	<footer>
 		<div>Realizzato da: </div>
-		<div>Riccardo De Cesaris - Matricola: 547762</div>
-		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>
+			<span>Riccardo De Cesaris - Matricola: 547762, </span>
+			<span>Filippo Vannutelli - Matricola: 550745</span>
+		</div>
 		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
 
