--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta charset="UTF-8" />
 	<title>Pagina Iniziale</title>
+	<link rel="stylesheet" href="/pagineDiServizio.css" />
 </head>
+
 <body>
-    <div id="intestazione">
-    	<h1>Benvenuto in SIW Football Stats</h1>
-    </div>
-    	
-    	
-    <div>
+	<h1>Benvenuto in SIW Football Stats</h1>
+
+
+	<div id="riferimenti">
 		<div class="link">
 			<a th:href="@{/login}">Accedi all'Applicazione</a>
-   		</div>
-   		
+		</div>
+
 		<div class="link">
 			<a th:href="@{/register}">Registrati come nuovo Utente</a>
-   		</div>
-    </div>
-    
-    <footer>
+		</div>
+	</div>
+
+	<footer>
 		<div>Realizzato da: </div>
-		<div>Riccardo De Cesaris - Matricola: 547762</div>
-		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>
+			<span>Riccardo De Cesaris - Matricola: 547762, </span>
+			<span>Filippo Vannutelli - Matricola: 550745</span>
+		</div>
 		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
-    
+
 </body>
+
 </html>
