--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -4,39 +4,44 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Home Utente</title>
+	<link rel="stylesheet" href="/pagineDiServizio.css" />
 </head>
 
 <body>
 	<h1>Home Utente</h1>
 
-	<div>
-		<a th:href="@{/user/giocatori}">Elenco giocatori</a>
-	</div>
+	<div id="riferimenti">
+		<div class="link">
+			<a th:href="@{/user/giocatori}">Elenco giocatori</a>
+		</div>
 
-	<div>
-		<a th:href="@{/user/squadre}">Elenco squadre</a>
-	</div>
+		<div class="link">
+			<a th:href="@{/user/squadre}">Elenco squadre</a>
+		</div>
 
-	<div>
-		<a th:href="@{/user/classifiche}">Classifiche dei Giocatori per Statistica</a>
-	</div>
+		<div class="link">
+			<a th:href="@{/user/classifiche}">Classifiche dei Giocatori per Statistica</a>
+		</div>
 
-	<div>
-		<a th:href="@{/user/toConfrontaGiocatori}">Scegli e Confronta due Giocatori</a>
-	</div>
+		<div class="link">
+			<a th:href="@{/user/toConfrontaGiocatori}">Scegli e Confronta due Giocatori</a>
+		</div>
 
-	<div>
-		<a th:href="@{/user/giocatoriPreferiti}">I tuoi giocatori preferiti</a>
-	</div>
+		<div class="link">
+			<a th:href="@{/user/giocatoriPreferiti}">I tuoi giocatori preferiti</a>
+		</div>
 
-	<div>
-		<a th:href="@{/logout}">Logout</a>
+		<div id="link">
+			<a th:href="@{/logout}">Logout</a>
+		</div>
 	</div>
 
 	<footer>
 		<div>Realizzato da: </div>
-		<div>Riccardo De Cesaris - Matricola: 547762</div>
-		<div>Filippo Vannutelli - Matricola: 550745</div>
+		<div>
+			<span>Riccardo De Cesaris - Matricola: 547762, </span>
+			<span>Filippo Vannutelli - Matricola: 550745</span>
+		</div>
 		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
 </body>
