Grafica: aggiornamento visualizzazione Squadra ed elenco Prestazioni di un Giocatore

--- a/src/main/resources/templates/admin/visualizza/squadra.html
+++ b/src/main/resources/templates/admin/visualizza/squadra.html
@@ -26,6 +26,15 @@
 		Elenco dei Giocatori in Rosa:
 
 		<table>
+			<tr th:if="${elencoGiocatori.size > 0}">
+				<td><strong>Nome e Cognome</strong></td>
+				<td><strong>Ruolo</strong></td>
+			</tr>
+			
+			<tr th:unless="${elencoGiocatori.size > 0}">
+				<td><strong>NESSUN GIOCATORE IN ROSA</strong></td>
+			</tr>
+			
 			<tr th:each="giocatore : ${elencoGiocatori}">
 				<td>
 					<a th:href="@{'/admin/giocatore/' + ${giocatore.id}}"
