--- a/src/main/resources/templates/admin/elenchi/prestazioni.html
+++ b/src/main/resources/templates/admin/elenchi/prestazioni.html
@@ -11,11 +11,17 @@
 	<div>
 		<h1>Elenco prestazioni:</h1>
 		<table>
+			<tr>
+				<td><strong>Partita: </strong></td>
+				<td><strong>Giocata contro: </strong></td>
+			</tr>
+			
 			<tr th:each="prestazione : ${elencoPrestazioni}">
 				<td>
 					<a th:href="@{'/admin/prestazione' + '/' + ${prestazione.id}}"
-						th:text="'Partita del ' + ${prestazione.dataInserita}" />
-					<span>, giocata contro </span>
+						th:text="${prestazione.dataInserita}" />
+				</td>
+				<td>
 					<a th:href="@{'/admin/squadra/' + ${prestazione.squadraAvversaria.id}}"
 						th:text="${prestazione.squadraAvversaria.nome}">Prestazione</a>
 				</td>
