PROBLEMA: è stata aggiunta la possibilità di modificare le entità
Quelle per Giocatore e Squadra funzionano, quella per Prestazione no, perchè bisogna cambiare il valore di un attributo che non è di tipo primitivo (Squadra avversaria)

Co-Authored-By: Riccardo De Cesaris <99416388+rdecesaris@users.noreply.github.com>

--- a/src/main/resources/templates/admin/elenchi/squadre.html
+++ b/src/main/resources/templates/admin/elenchi/squadre.html
@@ -16,11 +16,16 @@
 					<a href="squadra.html" th:href="@{'/admin/squadra' + '/' + ${squadra.id}}"
 						th:text="${squadra.nome}">Borgorosso FC</a>
 				</td>
-
 				<td>
 					<div class="button">
 						<a class="button" href="confermaCancellazioneSquadra.html"
 							th:href="@{'/admin/toDeleteSquadra' + '/' + ${squadra.id}}" th:text="Cancella">Cancella</a>
+					</div>
+				</td>
+				<td>
+					<div class="button">
+						<a class="button" href="modificaSquadraForm.html"
+							th:href="@{'/admin/modifySquadra' + '/' + ${squadra.id}}" th:text="Modifica">Modifica</a>
 					</div>
 				</td>
 			</tr>
