--- a/src/main/resources/templates/admin/elenchi/giocatori.html
+++ b/src/main/resources/templates/admin/elenchi/giocatori.html
@@ -16,7 +16,6 @@
 					<a href="giocatore.html" th:href="@{'/admin/giocatore' + '/' + ${giocatore.id}}"
 						th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Paolo Rossi</a>
 				</td>
-
 				<td>
 					<span th:text="${giocatore.ruolo}" />
 				</td>
@@ -24,12 +23,17 @@
 				<td th:if="${giocatore.squadra != null}">
 					<a th:href="@{'/admin/squadra/' + ${giocatore.squadra.id}}" th:text="${giocatore.squadra.nome}" />
 				</td>
-
 				<td>
 					<div class="button">
 						<a class="button" href="confermaCancellazioneGiocatore.html"
 							th:href="@{'/admin/toDeleteGiocatore' + '/' + ${giocatore.id}}"
 							th:text="Cancella">Cancella</a>
+					</div>
+				</td>
+				<td>
+					<div class="button">
+						<a class="button" href="modificaGiocatoreForm.html"
+							th:href="@{'/admin/modifyGiocatore' + '/' + ${giocatore.id}}" th:text="Modifica">Modifica</a>
 					</div>
 				</td>
 			</tr>
