--- a/src/main/resources/templates/admin/elenchi/prestazioni.html
+++ b/src/main/resources/templates/admin/elenchi/prestazioni.html
@@ -19,13 +19,18 @@
 					<a th:href="@{'/admin/squadra/' + ${prestazione.squadraAvversaria.id}}"
 						th:text="${prestazione.squadraAvversaria.nome}">Prestazione</a>
 				</td>
-
 				<td>
 					<div class="button">
 						<a class="button" th:href="@{'/admin/toRimuoviPrestazione/' + ${prestazione.id}}">Rimuovi</a>
 					</div>
 				</td>
-
+				<td>
+					<div class="button">
+						<a class="button" href="modificaPrestazioneForm.html"
+							th:href="@{'/admin/modifyPrestazione' + '/' + ${prestazione.id}}"
+							th:text="Modifica">Modifica</a>
+					</div>
+				</td>
 			</tr>
 		</table>
 	</div>
@@ -41,7 +46,7 @@
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
-	
+
 	<footer>
 		<div>Realizzato da: </div>
 		<div>Riccardo De Cesaris - Matricola: 547762</div>
