Bug Fix: lettura CSS pagine di servizio

--- a/src/main/resources/templates/admin/elenchi/giocatoriPreferiti.html
+++ b/src/main/resources/templates/admin/elenchi/giocatoriPreferiti.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Classifica per Preferenze</title>
-	<link rel="stylesheet" href="/pagineDiServizio.css" />
+	<link rel="stylesheet" href="css/pagineDiServizio.css" />
 </head>
 
 <body>
