--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Home Utente</title>
-	<link rel="stylesheet" href="/pagineDiServizio.css" />
+	<link rel="stylesheet" href="css/pagineDiServizio.css" />
 </head>
 
 <body>
