--- a/src/main/resources/templates/user/visualizza/prestazione.html
+++ b/src/main/resources/templates/user/visualizza/prestazione.html
@@ -14,7 +14,7 @@
 		<table>
 			<tr>
 				<td>Data: </td>
-				<td th:text="*{prestazione.data}">Data</td>
+				<td th:text="*{prestazione.dataInserita}">Data</td>
 			</tr>
 
 			<tr>
