--- a/src/main/resources/templates/admin/elenchi/giocatori.html
+++ b/src/main/resources/templates/admin/elenchi/giocatori.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Elenco Giocatori Admin</title>
-	<link rel="stylesheet" href="/giocatore.css">
+	<link rel="stylesheet" href="/css/giocatore.css">
 </head>
 
 <body>
