--- a/src/main/resources/templates/admin/elenchi/prestazioni.html
+++ b/src/main/resources/templates/admin/elenchi/prestazioni.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Elenco Prestazioni Admin</title>
-	<link rel="stylesheet" href="/prestazione.css">
+	<link rel="stylesheet" href="/css/prestazione.css">
 </head>
 
 <body>
