--- a/src/main/resources/templates/admin/visualizza/squadra.html
+++ b/src/main/resources/templates/admin/visualizza/squadra.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Dettagli Squadra Admin</title>
+	<link rel="stylesheet" href="/css/squadra.css">
 </head>
 
 <body>
