--- a/src/main/resources/templates/user/elenchi/prestazioni.html
+++ b/src/main/resources/templates/user/elenchi/prestazioni.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Elenco Prestazioni User</title>
+	<link rel="stylesheet" href="/css/prestazione.css" />
 </head>
 
 <body>
@@ -48,7 +49,6 @@
 		<div>Filippo Vannutelli - Matricola: 550745</div>
 		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
-
 </body>
 
 </html>
