--- a/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
+++ b/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Giocatore Inserito con Successo</title>
+	<link rel="stylesheet" href="/css/giocatore.css">
 </head>
 
 <body>
