--- a/src/main/resources/templates/admin/addSuccesso/inserimentoPrestazione.html
+++ b/src/main/resources/templates/admin/addSuccesso/inserimentoPrestazione.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Prestazione Inserita con Successo</title>
+	<link rel="stylesheet" href="/css/prestazione.css">
 </head>
 
 <body>
