--- a/src/main/resources/templates/admin/elenchi/squadre.html
+++ b/src/main/resources/templates/admin/elenchi/squadre.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Squadre</title>
-	<link rel="stylesheet" href="/squadra.css">
+	<link rel="stylesheet" href="/css/squadra.css">
 </head>
 
 <body>
