--- a/src/main/resources/templates/admin/form/squadraForm.html
+++ b/src/main/resources/templates/admin/form/squadraForm.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Inserimento Squadra</title>
+	<link rel="stylesheet" href="/css/squadra.css">
 </head>
 
 <body>
