--- a/src/main/resources/templates/user/classifiche/classificaAssist.html
+++ b/src/main/resources/templates/user/classifiche/classificaAssist.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Classifica per Assist</title>
-	<link rel="stylesheet" href="/pagineDiServizio.css" />
+	<link rel="stylesheet" href="/css/pagineDiServizio.css" />
 </head>
 
 <body>
@@ -32,10 +32,12 @@
 
 			<td th:text="${g.ruolo}" />
 
-			<td>
+			<td th:unless="${g.squadra==null}">
 				<a th:href="@{'/user/squadra/' + ${g.squadra.id}}" th:text="${g.squadra.nome}" />
 			</td>
-
+			<td th:if="${g.squadra==null}">
+				DA SPECIFICARE
+			</td>
 			<td th:text="${g.assistTotali}" />
 		</tr>
 	</table>
@@ -57,10 +59,8 @@
 
 	<footer>
 		<div>Realizzato da: </div>
-		<div>
-			<span>Riccardo De Cesaris - Matricola: 547762, </span>
-			<span>Filippo Vannutelli - Matricola: 550745</span>
-		</div>
+		<div>Riccardo De Cesaris - Matricola: 547762, </div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
 		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
 </body>
