--- a/src/main/resources/templates/user/elenchi/giocatoriPreferiti.html
+++ b/src/main/resources/templates/user/elenchi/giocatoriPreferiti.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Elenco Giocatori Preferiti User</title>
+	<link rel="stylesheet" href="/css/giocatore.css" />
 </head>
 
 <body>
