--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -38,10 +38,8 @@
 
 	<footer>
 		<div>Realizzato da: </div>
-		<div>
-			<span>Riccardo De Cesaris - Matricola: 547762, </span>
-			<span>Filippo Vannutelli - Matricola: 550745</span>
-		</div>
+		<div>Riccardo De Cesaris - Matricola: 547762, </div>
+		<div>Filippo Vannutelli - Matricola: 550745</div>
 		<div>Corso di Sistemi Informativi su Web, a.a. 2021-2022</div>
 	</footer>
 </body>
