--- a/src/main/resources/static/css/giocatore.css
+++ b/src/main/resources/static/css/giocatore.css
@@ -1,6 +1,16 @@
+body {
+	color: #B22222;
+}
+
+h1 {
+	text-align: center;
+	border-bottom: solid 3px #B22222;
+	padding-bottom: 18px;
+}
+
 footer {
 	margin-top: 10%;
-	background-color: black;
+	background-color: #B22222;
 	color: white;
 	text-align: center;
 }
@@ -15,6 +25,13 @@ div.button {
 	border-radius: 3px;
     background-color: lightgrey;
     text-decoration: inherit;
+}
+
+td {
+	border-bottom: solid 1px black;
+	text-align: center;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 div.button a:hover {
@@ -42,6 +59,7 @@ a:link, a:visited, a:active {
 }
 
 a:hover {
-	color: black;
+	color: #0000FF;
 	background-color: #DEB887;
+	text-decoration: underline;
 }
