--- a/src/main/resources/static/css/pagineDiServizio.css
+++ b/src/main/resources/static/css/pagineDiServizio.css
@@ -55,6 +55,12 @@ a.button {
     text-decoration: inherit;
 }
 
+#container {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
 #riferimenti {
 	margin-top: -12px;
 }
